# ncnn

./: .gitignore  MY_README.md  my_build.sh
chenng/facelandmark106/: CMakeLists.txt  README.md  face_landmark.cpp
chenng/facemesh/: CMakeLists.txt  README.md  main.cpp
chenng/facemesh-webassembly/: .gitignore  CMakeLists.txt  README.md  build.sh  facemesh-simd.data  facemesh-simd.js  facemesh-simd.wasm  index.html  main.cpp  main.js  package.json
chenng/facemesh-webassembly/assets/: iris_landmark-opt.param
chenng/nanodet/: CMakeLists.txt  README.md  main.cpp
chenng/nanodet-webassembly/: README.md  build.sh  index.html  nanodet-simd.js  nanodet-simd.wasm  nanodet.cpp  nanodetncnn.cpp  package-lock.json
examples/: CMakeLists.txt  face_landmark.cpp
